--- a/labs/lab_content.adoc
+++ b/labs/lab_content.adoc
@@ -19,10 +19,10 @@ This lab provides step by step instructions on how to use Serverless architectur
 * link:lab_1.html[*Lab 1: Deploy OpenWhisk*]
 * link:lab_2.html[*Lab 2: Deploy MongoDB*]
 * link:lab_3.html[*Lab 3: Create OpenWhisk Entities*]
-  - link:file:lab_3.html#_actions[*Actions*]
-  - link:file:lab_3.html#_organizing_resources_as_packages[*Packages*]
-  - link:file:lab_3.html#_introduction_to_triggers[*Triggers*]
-  - link:file:lab_3.html#_connecting_triggers_to_actions_using_rules[*Rules*]
+  - link:lab_3.html#_actions[*Actions*]
+  - link:lab_3.html#_organizing_resources_as_packages[*Packages*]
+  - link:lab_3.html#_introduction_to_triggers[*Triggers*]
+  - link:lab_3.html#_connecting_triggers_to_actions_using_rules[*Rules*]
   - link:lab_3.html#_creating_a_sequence_of_actions[*Sequences*]
 * link:lab_4.html[*Lab 4: Use Geofencing & Data Store*]
 * link:lab_5.html[*Lab 5: Deploy IoT Components*]
